Реалізовано створення рандомного предмету

--- a/Silently/mainwindow.ui
+++ b/Silently/mainwindow.ui
@@ -182,6 +182,19 @@
             <string>Open inventory</string>
            </property>
           </widget>
+          <widget class="QLabel" name="label">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>0</y>
+             <width>131</width>
+             <height>16</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Active Item</string>
+           </property>
+          </widget>
          </widget>
         </item>
         <item row="0" column="2" rowspan="2">
