--- a/Silently/createNewNoteSpaceWindow/createnewnotespacewindow.ui
+++ b/Silently/createNewNoteSpaceWindow/createnewnotespacewindow.ui
@@ -1,7 +1,7 @@
-<?xml version='1.0'?>
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>CreateNewNoteSpaceWindow</class>
- <widget name="CreateNewNoteSpaceWindow" class="QDialog">
+ <widget class="QDialog" name="CreateNewNoteSpaceWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -13,6 +13,42 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>30</y>
+     <width>201</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Enter name for new Note Service</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_NoteServiceName">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>100</y>
+     <width>113</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_Add">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>160</y>
+     <width>100</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Add</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
